# durst

./: .deepsource.toml  .gitignore  README.md  devenv.nix  pyproject.toml
.github/workflows/: coverage.yml  release.yml  test.yml
durst/: cli.py  db.py  tui.py
prost/: cli.py  db.py  tui.py
tests/: add_test_data.py  test_cli.py  test_db_backend.py  test_tui.py
