[project]
name = "prost"
version = "0.1.0"
description = "Python Registry for Organized Softdrink Transactions"
readme = "README.md"
icense = { file = "LICENSE" }
authors = [
  { name = "Mirza Arnaut", email = "mirza.arnaut45@gmail.com" },
  { name = "Tom Sander", email = "tom96.sander@t-online.de" },
]
requires-python = ">=3.10"
dependencies = ["textualize>=0.1"]

[dependency-groups]
test = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
minversion = "8.0"
# addopts = "-ra -q"
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s - %(name)-8s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[semantic_release]
version_variable = ["prost/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version:nf"]
major_on_zero = false
branch = "main"
build_command = "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.local/bin/env && uv build"
