[project]
name = "prost"
version = "0.1.0"
description = "Python Registry for Organized Softdrink Transactions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mirza Arnaut", email = "mirza.arnaut45@gmail.com" },
  { name = "Tom Sander", email = "tom96.sander@t-online.de" },
]
requires-python = ">=3.10"
dependencies = ["click>=8.3.0", "textual>=6.3.0"]

[dependency-groups]
test = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[project.scripts]
prost = "prost.cli:cli"

[tool.pyright]
exclude = [".venv", ".devenv/state/venv"]
venvPath = ".devenv/state/venv"
venv = "."

[tool.pytest.ini_options]
minversion = "8.0"
# addopts = "-ra -q"
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s - %(name)-8s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build >= 0.8.0, <0.10.0"]
build-backend = "uv_build"

[semantic_release]
version_variable = ["prost/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version:nf"]
major_on_zero = false
branch = "main"
build_command = "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.local/bin/env && uv build"
